css/template.css
/************************************************************************/
/* TEMPLATE CSS								*/
/*									*/
/* This style sheet contains those styles used by/in the generation	*/
/* of the mgi site-wide templates					*/
/*									*/
/************************************************************************/

/* Additional constraint on pages using an mgi template */
body {
    min-width:800px;
}

/*************************************************************************/
/* Class/ID styles for the template elements 				 */
/*************************************************************************/

#headerContainer {
    width: 100%;
    position:relative;
    min-width:920px;
    
} 

* html #headerContainer {
    width:expression(document.body.clientWidth < 860? "850px" : document.body.clientWidth > 1202? "1200px" : "auto" );
}

/* Block-level <div> wrapping mgi logo, mini-home tabs, and searchtool */
/* for the standard mgi template */
#topBannerContainer { 
    background-color: #DFEFFF;
    height: 80px;
    width: 100%;
    position:relative;
    min-width:920px;
}
/* <div> wrapping mgi logo and links below it; bound for easier placement */
#logoContainer {
    height: 75px;
    width:125px;
}

/* Block-level <div> wrapping the nav bar; see nav bar styles below */
#templateSearchTool {
    height:25px;
}

/*
* Wrapper around client-supplied page body. In terms of our templates,
* this wraps content between a templateBodyStart and templateBodyStop
*/
#templateBodyInsert { 
    padding:6px;
}

.templateMgiLogo{
    border:none;
}
.logoFooterContainer{
    margin:0;
    padding:0;
    height:10px;
}
a.logoFooterAnchor{
    font-size:11px; 
    color:#002255;
}
/*************************************************************************/
/*  Search Tool								 */
/*************************************************************************/
#searchToolTextArea {
    font-size:12px;
    font-family:Verdana,Arial,Helvetica,sans-serif;
    color:#002255;
    background-color:#FFFFDD;
    border: 1px #7D95B9 solid;
    padding:2px 1px;
    margin: 5px 4px;
    height:1.25em;
}

.searchToolButton {
    font-size:12px;
    font-family:Verdana, Arial,Helvetica;
    color:#002255;
    font-weight:bolder;
    background-color:#eeeeee;
    border: 1px #7D95B9 solid;
    padding:2px;
    -moz-outline-style: none;
    outline:0;
}

.searchToolHelp {
    margin-top:0px; 
    margin-left:10px; 
    padding-left:7px; 
    line-height:1.35;
}

.searchToolHelp li {
    font-size:1.1em;
}

.searchToolHelp ul {
    margin-left:30px; 
    padding-left:0px;
}

.searchToolHelp sup {
    font-size:0.75em;
}


/*************************************************************************/
/*  Styles specific to the homepage template				 */
/*************************************************************************/
#homePageTitle { 
    font-family: Verdana,Arial,Helvetica,sans-serif;
    font-size:38px; 
    font-weight:500;
    color: #002255;
    background-color: #dfefff;
    white-space: nowrap;
}
#homePageBodyInsert {
    width:800px;
    height: auto;
    margin-left: auto; 
    margin-right: auto;
}


/*************************************************************************/
/*  Standard Title Bar - Page Title appearing within the body of a page	 */
/*************************************************************************/

#titleBarWrapper {
    font-family: Arial,Helvetica;
    vertical-align: middle;
    color: #000001;
    text-align: center;
    margin-bottom:8px;
    width: 100%;
    min-width: 750px;
    height:35px;
}

* html #titleBarWrapper {
    width: 840px;
}


#titleBarWrapper img.titleBarHelpIcon {
    border:none;
    float:left;
}

#titleBarWrapper .yourInputButton {
    float:right;
    height:33px;
}


.titleBarMainTitle {
    font-size: 22px;
    font-weight: bold;
}

.titleBarSubTitle {
    font-size: 14px;
    text-align: center;
}

/*************************************************************************/
/*  FAQ Header Bar - Header on FAQ pages				 */
/*************************************************************************/

#faqPageHeader {
    background-color:#DFEFFF;    
    position:relative;
    top:0;
    left:0;
    width: 100%;
    height:auto;
    border:thin solid #002255;
    margin-bottom: 5px;
    overflow:auto; 
    padding:0px;
}

.faqHeaderText {
    font-family:Verdana,Arial,Helvetica;
    font-weight:bold;
    font-size:20px;
    vertical-align: bottom;
    color:#002255;
}

#faqPageHeader{overflow:auto; width:100%; height:auto; padding:0px;}

.overlibBGClass {
	border-width: 1px;
	border-spacing: 2px;
	border-style: solid;
	border-color: #002255;
	border-collapse: collapse;
	background-color: #002255;
}

.overlibBGClass td td {
	padding: 2px;
}

/*************************************************************************/
/*  Notices, if displayed						 */
/*************************************************************************/

.notice {
    width:290px;
}

.tour, .tour a {
    width:16em; 
    background-color:#D0E0F0;
    color:#FF0000;
    text-align:center;
    font-weight: bold;
}

.bl{
    background:url(../images/roundedButtonBlueBL.gif) 0 100% no-repeat; 
}

.br{
    background:url(../images/roundedButtonBlueBR.gif) 100% 100% no-repeat;
}

.tl{
    background:url(../images/roundedButtonBlueTL.gif) 0 0 no-repeat;
}

.tr{
    background:url(../images/roundedButtonBlueTR.gif) 100% 0 no-repeat; padding:5px;
}

.notice a:link {       
    color: #1433c8;
    text-decoration: none;
    border-bottom-width: 1px;
    border-bottom-style: dotted;
    border-bottom-color: #999999;
}

.notice a:hover {
    color: #cc0000;
    text-decoration: none;
    border-bottom-width: 1px;
    border-bottom-style: dashed;
    border-bottom-color: #cc0000;
}

.red {
    color:#FF0000;
}

/* template nav bar Tabs */
.navtabs { /* default state */
    padding: 0;
    margin: 0;
    background: transparent;
    text-align: center;
    position: absolute;
    bottom: 0px;
    right: 0px;
    clear: right;
    width: 70em;
}

.navtabs span{
    padding 0 3em 0 0;
    float: right;
}
.navtabs ul{
    font-size: 13px;
    list-style: none;
    padding: 0px;
}

.navtabs li{
    display: inline;
    margin-right: 2px;
    margin-left: 0px;
}

.navtabs a{
    float: left;
    color: #FFFFFF;
    background: #54709B url(../images/tl.gif) no-repeat left top; 
    margin-right: 2px;
    padding: 0 0 1px 3px;
    text-decoration: none;
}

.navtabs a span{
    float: left;
    display: block;
    background: transparent url(../images/tr.gif) no-repeat right top; 
    padding: 2px 4px 2px 3px;
}

.navtabs a:hover, .navtabs a:hover span{     
    background-color: #00173C;
    color: white;
}

.navtabs .selected a,
.navtabs .selected a:focus, /* no focus effect for selected */
.navtabs .selected a:hover { 
    background-color: #002255;
    font-weight: bold;
}

.tabcontainer{
	clear: right;
	width: 95%; 
	height: 1.5em; 
}

.tabcontent {display:none;}
.tabTipFont {color:#002255; font-size:9px; font-style:italic;}
.tabTipBoxFG {border: none; background-color:transparent; width:auto;}
.tabTipBoxBG {border: none; background-color:transparent; width:auto;}

